[package]
name = "voxtech-core"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.nalgebra]
version = "0.34"

[dependencies]
serde_json = "1"

pollster = "0.4"
wgpu = "27"
winit = "0.30"
base64 = "0.22"
