[package]
name = "voxtech-experimental"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = "fat"
strip = "debuginfo"

[profile.dev]
opt-level = 1
lto = false

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.bytemuck]
version = "1"
features = ["derive"]

[dependencies.hashbrown]
version = "0.16"
features = ["serde"]

[dependencies.nalgebra]
version = "0.34"

[dependencies.image]
version = "0.25"
features = ["png", "jpeg", "bmp", "tga"]

[dependencies]
parking_lot = "0.12"

wgpu = "27"
winit = "0.30"
pollster = "0.4"

serde_json = "1"
rmp-serde = "1"
